clusters/cluster0/kubernetes/apps/media/sonarr/app/sonarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarr
  name: sonarr
  namespace: media
spec:
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: control-01
      containers:
        - image: lscr.io/linuxserver/sonarr:latest
          imagePullPolicy: Always
          name: sonarr
          ports:
          - name: sonarr-port
            containerPort: 8989
            protocol: TCP
          volumeMounts:
          - name: sonarr-config
            mountPath: /config
          - name: sonarr-media
            mountPath: /data
          resources:
            requests:
              memory: 1500Mi
              cpu: 100m
            limits:
              memory: 3Gi
              cpu: 1500m
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: sonarr-config
        persistentVolumeClaim:
          claimName: "sonarr-config"
      - name: sonarr-media
        persistentVolumeClaim:
          claimName: "media-pvc"
  selector:
    matchLabels:
      app: sonarr
