clusters/cluster0/kubernetes/apps/media/sonarr/app/sonarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: sonarr
  ports:
    - port: 8989
      protocol: TCP
      targetPort: 8989
