clusters/cluster0/kubernetes/apps/media/sonarr/app/sonarr-external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: gregbob.net
spec:
  ingressClassName: external
  rules:
  - host: sonarr.gregbob.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: sonarr-service
            port:
              number: 8989
